--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sam-snippets",
-  "displayName": "AWS SAM Snippets",
+  "displayName": "AWS Serverless Application Model (SAM) Snippets",
   "description": "Adds snippets for all the AWS Serverless Application Model (SAM) resources in VS Code.",
   "author": "Danny Steenman",
   "version": "1.3.0",
