--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Update this VSCode extension.
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  workflow_dispatch: {}
 jobs:
   build:
     runs-on: ubuntu-latest
